# obsidian-graph-mcp

./: .env.example  .gitignore  .obsidian-graph.conf.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CONCURRENCY.md  TOOLS.md
docs/plans/: 2026-01-20-folder-exclusion.md
scripts/: generate-db-password.sh
src/: __init__.py  diagnose_vault.py  embedder.py  exceptions.py  exclusion.py  file_watcher.py  graph_builder.py  hub_analyzer.py  indexer.py  schema.sql  security_utils.py  server.py  validation.py  vector_store.py
tests/: conftest.py  test_error_paths.py  test_exceptions.py  test_exclusion.py  test_file_watcher.py  test_graph_builder.py  test_hub_analyzer.py  test_indexer.py  test_mcp_tools_integration.py  test_race_conditions.py  test_security_passwords.py  test_security_path_traversal.py  test_simple.py  test_tools.py  test_validation.py
